--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>PurpleWall 紫墙 | 您见未来，我执匠心</title>
+    <title>PurpleWall 上海紫墙</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
@@ -54,32 +54,26 @@
             <div class="services-grid">
                 <div class="service-card">
                     <div class="service-icon">设计</div>
-                    <h3 class="service-title">创意设计</h3>
                     <p class="service-description">概念 / 效果图 / 工程拆解</p>
                 </div>
                 <div class="service-card">
                     <div class="service-icon">打样</div>
-                    <h3 class="service-title">打样制样</h3>
                     <p class="service-description">材料实验 / 结构验证</p>
                 </div>
                 <div class="service-card">
                     <div class="service-icon">生产</div>
-                    <h3 class="service-title">生产制作</h3>
                     <p class="service-description">柔性制造 / 按件定制</p>
                 </div>
                 <div class="service-card">
                     <div class="service-icon">配送</div>
-                    <h3 class="service-title">全球物流</h3>
                     <p class="service-description">包装 / 报关 / 航线</p>
                 </div>
                 <div class="service-card">
                     <div class="service-icon">安装</div>
-                    <h3 class="service-title">安装交付</h3>
                     <p class="service-description">不影响门店运营</p>
                 </div>
                 <div class="service-card">
                     <div class="service-icon">维护</div>
-                    <h3 class="service-title">维护升级</h3>
                     <p class="service-description">快拆复用 / 生命周期管理</p>
                 </div>
             </div>
@@ -89,7 +83,7 @@
     <!-- 精选案例区域 -->
     <section class="section cases-section">
         <div class="container">
-            <h2 class="section-title">精选案例</h2>
+            <h2 class="section-title2">精选案例</h2>
             <p class="section-subtitle">
                 我们为全球高端品牌提供从创意、打样到生产与安装的一体化展示道具解决方案。
                 每一个案例，都是一次品牌与空间的深度对话。
@@ -144,7 +138,7 @@
         <!-- 品牌Logo墙 -->
         <div class="logo-wall-section">
             <div class="container">
-                <h3 class="logo-wall-title">我们的合作伙伴</h3>
+                <h3 class="logo-wall-title">服务客户</h3>
                 <p class="logo-wall-subtitle">与全球知名品牌共创价值</p>
                 <div class="logo-wall">
                     <img src="assets/640 (1).png" alt="合作伙伴Logo墙" class="logo-wall-image">
