--- a/cases.html
+++ b/cases.html
@@ -28,7 +28,8 @@
             </div>
         </div>
     </header>
-
+    
+    <body class="subpage"></body>
     <!-- 子页面Hero区域 -->
     <section class="sub-hero">
         <div class="img">
@@ -171,7 +172,7 @@
                 <!-- 案例 F -->
                 <div class="case-item" data-category="retail luxury">
                     <div class="case-image">
-                        <img src="assets/微信图片_20250514131803.png" alt="旗舰店陈列">
+                        <img src="assets/1803.jpg" alt="旗舰店陈列">
                     </div>
                     <div class="case-info">
                         <span class="case-category">零售空间 / 奢侈品</span>
