--- a/contact.html
+++ b/contact.html
@@ -29,6 +29,7 @@
         </div>
     </header>
 
+    <body class="subpage"></body>
     <!-- 子页面Hero区域 -->
     <section class="sub-hero">
         <div class="img">
@@ -71,7 +72,7 @@
             
             <!-- 联系表单 -->
             <div class="contact-form">
-                <h2 style="text-align:center;margin-bottom:40px;color:var(--text-primary);">项目咨询</h2>
+                <h2 style="text-align:center;margin-bottom:40px;color:var(--brand-purple-light);">项目咨询</h2>
                 <form id="contactForm">
                     <div class="form-group">
                         <label for="name">姓名</label>
