--- a/services.html
+++ b/services.html
@@ -28,11 +28,12 @@
             </div>
         </div>
     </header>
-
+    
+    <body class="subpage"></body>
     <!-- 子页面Hero区域 -->
     <section class="sub-hero">
         <div class="img">
-            <img src="assets/微信图片_20250514131803.png" alt="我们的服务">
+            <img src="assets/1803.jpg" alt="我们的服务">
         </div>
         <div class="shade"></div>
         <div class="copy">
@@ -134,5 +135,6 @@
     </footer>
 
     <script src="script.js"></script>
+
 </body>
 </html>
