--- a/case-d.html
+++ b/case-d.html
@@ -29,6 +29,7 @@
         </div>
     </header>
 
+    <body class="subpage"></body>
     <!-- 子页面Hero区域 -->
     <section class="sub-hero">
         <div class="img">
