--- a/case-e.html
+++ b/case-e.html
@@ -28,7 +28,8 @@
             </div>
         </div>
     </header>
-
+    
+    <body class="subpage"></body>
     <!-- 子页面Hero区域 -->
     <section class="sub-hero">
         <div class="img">
