--- a/contact.html
+++ b/contact.html
@@ -237,7 +237,7 @@
         }
 
         /* 移动端导航优化 */
-        @media (max-width: 992px) {
+        @media (max-width: 420px) {
             .nav-links {
                 display: none;
                 position: fixed;
@@ -245,10 +245,10 @@
                 left: 0;
                 right: 0;
                 background: rgba(0, 0, 0, 0.98);
-                backdrop-filter: blur(10px);
-                flex-direction: column;
-                padding: 30px;
-                gap: 18px;
+                backdrop-filter: blur(1px);
+                flex-direction: row;
+                padding: 10px;
+                gap: 8px;
                 border-top: 1px solid rgba(255, 255, 255, 0.1);
                 z-index: 999;
             }
@@ -283,7 +283,7 @@
         }
     
         /* 移动端菜单的黑色背景保持不变 */
-        @media (max-width: 992px){
+        @media (max-width: 420px){
             body.subpage .nav-links{
                 background: rgba(0, 0, 0, 0.98) !important
             }
@@ -322,9 +322,9 @@
             width: 100%;
             height: 100%;
             background: linear-gradient(to bottom, 
-                rgba(0, 0, 0, 0.4) 0%,
-                rgba(18, 11, 26, 0.6) 50%,
-                rgba(18, 11, 26, 0.8) 100%);
+                rgba(0, 0, 0, 0.1) 0%,
+                rgba(18, 11, 26, 0.25) 50%,
+                rgba(18, 11, 26, 0.4) 100%);
             z-index: 1;
         }
 
@@ -726,7 +726,7 @@
                         <div class="contact-card-content">
                             <h3 class="contact-card-title">邮箱</h3>
                             <div class="contact-card-text">
-                                <p>hi@purplewall.cn</p>
+                                <p>hi@purplewall.com.cn</p>
                                 <p>business@purplewall.cn</p>
                             </div>
                         </div>
@@ -739,8 +739,8 @@
                         <div class="contact-card-content">
                             <h3 class="contact-card-title">电话</h3>
                             <div class="contact-card-text">
-                                <p>+86 21 8888 9999</p>
-                                <p class="small-text">服务时间：周一至周五 9:00-18:00</p>
+                                <p>+86 21 36031393</p>
+                                <p class="small-text">服务时间：周一至周五 9:30-18:00</p>
                             </div>
                         </div>
                     </div>
@@ -750,10 +750,10 @@
                             <i class="fas fa-map-marker-alt"></i>
                         </div>
                         <div class="contact-card-content">
-                            <h3 class="contact-card-title">上海办公室</h3>
+                            <h3 class="contact-card-title">上海</h3>
                             <div class="contact-card-text">
-                                <p>上海市黄浦区创意园区A座12楼</p>
-                                <p class="small-text">邮编：200000</p>
+                                <p>上海市普陀区中山北路3300号环球港B座40E</p>
+                                <p class="small-text">邮编：200063</p>
                             </div>
                         </div>
                     </div>
@@ -763,10 +763,10 @@
                             <i class="fas fa-map-marker-alt"></i>
                         </div>
                         <div class="contact-card-content">
-                            <h3 class="contact-card-title">苏州工厂</h3>
+                            <h3 class="contact-card-title">苏州</h3>
                             <div class="contact-card-text">
-                                <p>广州市天河区商务中心B座8楼</p>
-                                <p class="small-text">邮编：510000</p>
+                                <p>江苏省苏州市太仓市建湖路10号</p>
+                                <p class="small-text">邮编：215415</p>
                             </div>
                         </div>
                     </div>
