--- a/services.html
+++ b/services.html
@@ -239,7 +239,6 @@
         .nav-link.active {
             color: var(--text-primary);
             font-weight: 300;
-            font-size: 16px;
         }
 
         .nav-link::after {
@@ -278,7 +277,7 @@
         }
 
         /* 移动端导航优化 */
-        @media (max-width: 992px) {
+        @media (max-width: 420px) {
             .nav-links {
                 display: none;
                 position: fixed;
@@ -288,7 +287,7 @@
                 background: rgba(0, 0, 0, 0.98);
                 backdrop-filter: blur(10px);
                 flex-direction: column;
-                padding: 30px;
+                padding: 25px 20px;
                 gap: 18px;
                 border-top: 1px solid rgba(255, 255, 255, 0.1);
                 z-index: 999;
@@ -308,6 +307,11 @@
                 width: 100%;
                 justify-content: center;
             }
+
+             /* 增加触摸区域 */
+             .nav-link {
+                padding: 18px 0; /* 增加触摸区域 */
+            }
         }
 
         /* 为所有子页面导航栏设置黑色背景 */
@@ -324,7 +328,7 @@
         }
     
         /* 移动端菜单的黑色背景保持不变 */
-        @media (max-width: 992px){
+        @media (max-width: 420px){
             body.subpage .nav-links{
                 background: rgba(0, 0, 0, 0.98) !important
             }
@@ -352,7 +356,7 @@
             width: 100%;
             height: 100%;
             object-fit: cover;
-            opacity: 0.4;
+            opacity: 0.8;
             filter: brightness(0.7) contrast(1.1);
         }
 
@@ -363,9 +367,9 @@
             width: 100%;
             height: 100%;
             background: linear-gradient(to bottom, 
-                rgba(0, 0, 0, 0.4) 0%,
-                rgba(18, 11, 26, 0.6) 50%,
-                rgba(18, 11, 26, 0.8) 100%);
+                rgba(0, 0, 0, 0.05) 0%,
+                rgba(18, 11, 26, 0.15) 50%,
+                rgba(18, 11, 26, 0.2) 100%);
             z-index: 1;
         }
 
@@ -720,6 +724,8 @@
             .section {
                 padding: 60px 0;
             }
+
+
         }
     </style>
 </head>
@@ -929,7 +935,7 @@
             // 5. 窗口大小变化处理
             window.addEventListener('resize', () => {
                 // 如果窗口变大，隐藏移动端菜单
-                if (window.innerWidth > 992 && navLinks) {
+                if (window.innerWidth > 420 && navLinks) {
                     navLinks.classList.remove('active');
                     if (menuBtn) {
                         const icon = menuBtn.querySelector('i');
