--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
             padding: 8px 0;
             position: relative;
             transition: var(--transition);
-            color: var(--brand-light);
+            color: var(--brand);
         }
         
         /* 为每个导航链接设置不同的下划线颜色和悬停文字颜色 */
