--- a/index.html
+++ b/index.html
@@ -803,7 +803,7 @@
         <div class="qrcode-content">
             <span class="close-qrcode">&times;</span>
             <h3>关注PurpleWall微信</h3>
-            <img src="assets/qrcode-placeholder.jpg" alt="微信公众号二维码">
+            <img src="assets/640.png" alt="微信公众号二维码">
             <p>扫描二维码关注我们</p>
         </div>
     </div>
