--- a/services.html
+++ b/services.html
@@ -1275,8 +1275,8 @@
         </div>
         <div class="sub-hero-shade"></div>
         <div class="sub-hero-content container">
-            <h1 class="sub-hero-title">我们的服务</h1>
-            <p class="sub-hero-subtitle">提供从概念创意到施工落地的全流程解决方案</p>
+            <h1 class="sub-hero-title">全案展陈 · 匠作于心</h1>
+            <p class="sub-hero-subtitle">从创意到落地，以匠心筑您所期</p>
         </div>
     </section>
 
