--- a/services.html
+++ b/services.html
@@ -1287,7 +1287,7 @@
                 <!-- 印刷服务卡片 -->
                 <div class="service-card-item" data-service="printing">
                     <div class="service-card-img">
-                        <img src="assets/20250417121620.jpg" alt="印刷服务">
+                        <img src="assets/print01.webp" alt="印刷服务">
                     </div>
                     <div class="service-card-content">
                         <h3 class="service-card-title">印刷</h3>
@@ -1298,7 +1298,7 @@
                 <!-- 亚克力服务卡片 -->
                 <div class="service-card-item" data-service="acrylic">
                     <div class="service-card-img">
-                        <img src="assets/20250417121703.jpg" alt="亚克力服务">
+                        <img src="assets/yakeli.webp" alt="亚克力服务">
                     </div>
                     <div class="service-card-content">
                         <h3 class="service-card-title">亚克力</h3>
@@ -1309,7 +1309,7 @@
                 <!-- 纸艺服务卡片 -->
                 <div class="service-card-item" data-service="paper">
                     <div class="service-card-img">
-                        <img src="assets/1803.jpg" alt="纸艺服务">
+                        <img src="assets/paper.webp" alt="纸艺服务">
                     </div>
                     <div class="service-card-content">
                         <h3 class="service-card-title">纸艺</h3>
@@ -1320,7 +1320,7 @@
                 <!-- 木工服务卡片 -->
                 <div class="service-card-item" data-service="wood">
                     <div class="service-card-img">
-                        <img src="assets/69dc6a5be5d.jpg" alt="木工服务">
+                        <img src="assets/wood.webp" alt="木工服务">
                     </div>
                     <div class="service-card-content">
                         <h3 class="service-card-title">木工</h3>
@@ -1331,7 +1331,7 @@
                 <!-- 金属服务卡片 -->
                 <div class="service-card-item" data-service="metal">
                     <div class="service-card-img">
-                        <img src="assets/20250417121620.jpg" alt="金属服务">
+                        <img src="assets/material1.png" alt="金属服务">
                     </div>
                     <div class="service-card-content">
                         <h3 class="service-card-title">金属</h3>
@@ -1342,7 +1342,7 @@
                 <!-- 数字技术服务卡片 -->
                 <div class="service-card-item" data-service="digital">
                     <div class="service-card-img">
-                        <img src="assets/20250417121703.jpg" alt="数字技术服务">
+                        <img src="assets/suzi1.png" alt="数字技术服务">
                     </div>
                     <div class="service-card-content">
                         <h3 class="service-card-title">数字技术</h3>
@@ -1427,54 +1427,54 @@
             printing: {
                 title: "印刷",
                 images: [
-                    { src: "assets/20250417121620.jpg", caption: "有色印刷与效果打印" },
-                    { src: "assets/20250417121620.jpg", caption: "专业制回与高清印刷" },
-                    { src: "assets/20250417121620.jpg", caption: "多印刷方法与艺术印刷" }
+                    { src: "assets/print01.webp", caption: "有色印刷与效果打印" },
+                    { src: "assets/print02.webp", caption: "专业制回与高清印刷" },
+                    { src: "assets/print03.webp", caption: "多印刷方法与艺术印刷" }
                 ],
                 description: "有色印刷·效果打印·专业制回"
             },
             acrylic: {
                 title: "亚克力",
                 images: [
-                    { src: "assets/20250417121703.jpg", caption: "柔性软光印刷" },
-                    { src: "assets/20250417121703.jpg", caption: "智能加工与制作" },
-                    { src: "assets/20250417121703.jpg", caption: "可进入的工艺品牌装配" }
+                    { src: "assets/yakeli-1.webp", caption: "柔性软光印刷" },
+                    { src: "assets/yakeli-2.png", caption: "智能加工与制作" },
+                    { src: "assets/yakeli-3.png", caption: "可进入的工艺品牌装配" }
                 ],
                 description: "柔性软光·智能加工·制作工艺"
             },
             paper: {
                 title: "纸艺",
                 images: [
-                    { src: "assets/1803.jpg", caption: "纸艺工艺制作" },
-                    { src: "assets/1803.jpg", caption: "片状纸与艺术表现" },
-                    { src: "assets/1803.jpg", caption: "结构榫合与动态展示" }
+                    { src: "assets/paper.webp", caption: "纸艺工艺制作" },
+                    { src: "assets/paper1.png", caption: "片状纸与艺术表现" },
+                    { src: "assets/paper2.png", caption: "结构榫合与动态展示" }
                 ],
                 description: "制作工艺·片状纸·结构榫合"
             },
             wood: {
                 title: "木工",
                 images: [
-                    { src: "assets/69dc6a5be5d.jpg", caption: "压力安装木工装置" },
-                    { src: "assets/69dc6a5be5d.jpg", caption: "放大拆掉模块化设计" },
-                    { src: "assets/69dc6a5be5d.jpg", caption: "道具安装与工程规划" }
+                    { src: "assets/wood.webp", caption: "压力安装木工装置" },
+                    { src: "assets/wood.webp", caption: "放大拆掉模块化设计" },
+                    { src: "assets/wood.webp", caption: "道具安装与工程规划" }
                 ],
                 description: "压力安装·放大拆掉·道具安装"
             },
             metal: {
                 title: "金属",
                 images: [
-                    { src: "assets/20250417121620.jpg", caption: "专业向透金属装置" },
-                    { src: "assets/20250417121620.jpg", caption: "可拉下式设计与安装" },
-                    { src: "assets/20250417121620.jpg", caption: "精硬向金属工艺" }
+                    { src: "assets/material1.png", caption: "专业向透金属装置" },
+                    { src: "assets/material2.png", caption: "可拉下式设计与安装" },
+                    { src: "assets/material2.png", caption: "精硬向金属工艺" }
                 ],
                 description: "专业向透·可拉下式·精硬向"
             },
             digital: {
                 title: "数字技术",
                 images: [
-                    { src: "assets/20250417121703.jpg", caption: "智能机器人工艺制作" },
-                    { src: "assets/20250417121703.jpg", caption: "新增有实数字化技术" },
-                    { src: "assets/20250417121703.jpg", caption: "自动化工艺与数字制造" }
+                    { src: "assets/suzi1.png", caption: "智能机器人工艺制作" },
+                    { src: "assets/suzi2.png", caption: "新增有实数字化技术" },
+                    { src: "assets/suzi1.png", caption: "自动化工艺与数字制造" }
                 ],
                 description: "智能机器人·新增有实·自动化工艺"
             }
