--- a/cases.html
+++ b/cases.html
@@ -16,7 +16,7 @@
             --brand-re: #c82272;
             --dark: #1d252d;
             --light: #ffffff;
-            --radius: 12px;
+            --radius: 5px;
             --shadow: 0 8px 30px rgba(0,0,0,0.12);
             --transition: all 0.3s ease;
             --gray1:#fafafc;
@@ -1285,7 +1285,7 @@
                 <button class="filter-btn" data-filter="small">常规小道具</button>
                 <button class="filter-btn" data-filter="window">橱窗展示</button>
                 <button class="filter-btn" data-filter="festival">节日氛围</button>
-                <button class="filter-btn" data-filter="theme">主题道具</button>
+                <button class="filter-btn" data-filter="theme">空间展示</button>
             </div>
             
             <!-- 案例网格 -->
@@ -1293,12 +1293,12 @@
                 <!-- 案例 A - 常规小道具 -->
                 <a href="case-a.html" class="case-item" data-category="small">
                     <div class="case-image">
-                        <img src="assets/2025-08-11_133845_823.jpg" alt="高级珠宝展示系统">
+                        <img src="assets/mac1.webp" alt="M·A·C魅可中国全新旗舰焕新启幕">
                     </div>
                     <div class="case-info">
-                        <span class="case-category">常规小道具</span>
-                        <h3 class="case-title">高级珠宝展示系统</h3>
-                        <p class="case-desc">为国际顶级珠宝品牌打造模块化展示系统，集成智能照明与安全装置，支持快速拆装与布局调整。</p>
+                        <span class="case-category">空间展示</span>
+                        <h3 class="case-title">M·A·C魅可中国全新旗舰焕新启幕</h3>
+                        <p class="case-desc">当代艺术与彩妆碰撞重塑美学空间</p>
                     </div>
                 </a>
                 
