--- a/services.html
+++ b/services.html
@@ -16,7 +16,7 @@
             --brand-re: #c82272;
             --dark: #1d252d;
             --light: #ffffff;
-            --radius: 12px;
+            --radius: 5px;
             --shadow: 0 8px 30px rgba(0,0,0,0.12);
             --transition: all 0.3s ease;
             --gray1:#fafafc;
@@ -450,7 +450,7 @@
         /* 服务卡片样式 */
         .service-card-item {
             background: var(--light);
-            border-radius: var(--radius);
+            border-radius: 5px;
             overflow: hidden;
             box-shadow: var(--shadow);
             transition: var(--transition);
