--- a/case-a.html
+++ b/case-a.html
@@ -1083,15 +1083,15 @@
             <!-- 图片2 - 左边，5:4长宽比 -->
             <div class="gallery-item single">
                 <div class="gallery-image-container">
-                    <img src="assets/2025-08-11_133856_756.jpg" alt="橱窗展示效果" class="gallery-image">
+                    <img src="assets/mac3.webp" alt="橱窗展示效果" class="gallery-image">
                 </div>
-                <div class="gallery-caption">橱窗展示系统采用动态机械装置</div>
+                <div class="gallery-caption">由紫墙联合品牌倾力打造，一台为南京德基全球旗舰店特别定制的独特“钢琴”</div>
             </div>
             
             <!-- 图片3 - 右边，5:4长宽比 -->
             <div class="gallery-item single">
                 <div class="gallery-image-container">
-                    <img src="assets/20250417121703.jpg" alt="细节工艺展示" class="gallery-image">
+                    <img src="assets/mac4.webp" alt="细节工艺展示" class="gallery-image">
                 </div>
                 <div class="gallery-caption">展示系统细节处体现匠心工艺</div>
             </div>
@@ -1099,15 +1099,15 @@
             <!-- 图片4 - 单张满版，16:9长宽比 -->
             <div class="gallery-item wide">
                 <div class="gallery-image-container">
-                    <img src="assets/2025-08-11_133913_165.jpg" alt="智能照明系统" class="gallery-image">
+                    <img src="assets/mac5.webp" alt="智能照明系统" class="gallery-image">
                 </div>
-                <div class="gallery-caption">集成专业级LED光源，色温精确控制在5600K</div>
+                <div class="gallery-caption">由紫墙联合品牌倾力打造，一台为南京德基全球旗舰店特别定制的独特“钢琴”</div>
             </div>
             
             <!-- 图片5 - 左边，5:4长宽比 -->
             <div class="gallery-item single">
                 <div class="gallery-image-container">
-                    <img src="assets/20250417121620.jpg" alt="模块化设计" class="gallery-image">
+                    <img src="assets/mac6.webp" alt="模块化设计" class="gallery-image">
                 </div>
                 <div class="gallery-caption">展示单元采用标准化接口设计</div>
             </div>
@@ -1115,7 +1115,7 @@
             <!-- 图片6 - 右边，5:4长宽比 -->
             <div class="gallery-item single">
                 <div class="gallery-image-container">
-                    <img src="assets/1803.jpg" alt="互动展示" class="gallery-image">
+                    <img src="assets/mac7.webp" alt="互动展示" class="gallery-image">
                 </div>
                 <div class="gallery-caption">结合触控技术与多媒体内容</div>
             </div>
@@ -1127,7 +1127,7 @@
         <!-- 图片1 -->
         <div class="mobile-gallery-item">
             <div class="mobile-gallery-image-container">
-                <img src="assets/2025-08-11_133845_823.jpg" alt="旗舰店主展示区" class="mobile-gallery-image">
+                <img src="assets/mac2.webp" alt="旗舰店主展示区" class="mobile-gallery-image">
             </div>
             <div class="mobile-gallery-caption">模块化设计理念，可根据不同珠宝系列快速调整展示布局</div>
         </div>
@@ -1135,7 +1135,7 @@
         <!-- 图片2 -->
         <div class="mobile-gallery-item">
             <div class="mobile-gallery-image-container">
-                <img src="assets/2025-08-11_133856_756.jpg" alt="橱窗展示效果" class="mobile-gallery-image">
+                <img src="assets/mac3.webp" alt="橱窗展示效果" class="mobile-gallery-image">
             </div>
             <div class="mobile-gallery-caption">橱窗展示系统采用动态机械装置</div>
         </div>
@@ -1143,7 +1143,7 @@
         <!-- 图片3 -->
         <div class="mobile-gallery-item">
             <div class="mobile-gallery-image-container">
-                <img src="assets/20250417121703.jpg" alt="细节工艺展示" class="mobile-gallery-image">
+                <img src="assets/mac4.webp" alt="细节工艺展示" class="mobile-gallery-image">
             </div>
             <div class="mobile-gallery-caption">展示系统细节处体现匠心工艺</div>
         </div>
@@ -1151,7 +1151,7 @@
         <!-- 图片4 -->
         <div class="mobile-gallery-item">
             <div class="mobile-gallery-image-container">
-                <img src="assets/2025-08-11_133913_165.jpg" alt="智能照明系统" class="mobile-gallery-image">
+                <img src="assets/mac5.webp" alt="智能照明系统" class="mobile-gallery-image">
             </div>
             <div class="mobile-gallery-caption">集成专业级LED光源，色温精确控制在5600K</div>
         </div>
@@ -1159,7 +1159,7 @@
         <!-- 图片5 -->
         <div class="mobile-gallery-item">
             <div class="mobile-gallery-image-container">
-                <img src="assets/20250417121620.jpg" alt="模块化设计" class="mobile-gallery-image">
+                <img src="assets/mac6.webp" alt="模块化设计" class="mobile-gallery-image">
             </div>
             <div class="mobile-gallery-caption">展示单元采用标准化接口设计</div>
         </div>
@@ -1167,7 +1167,7 @@
         <!-- 图片6 -->
         <div class="mobile-gallery-item">
             <div class="mobile-gallery-image-container">
-                <img src="assets/1803.jpg" alt="互动展示" class="mobile-gallery-image">
+                <img src="assets/mac7.webp" alt="互动展示" class="mobile-gallery-image">
             </div>
             <div class="mobile-gallery-caption">结合触控技术与多媒体内容</div>
         </div>
